--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 </head>
 <body>
     <!-- Overlay (dark background) -->
-    <div id="overlay" onclick="closePopup()"></div>
+    <div id="overlay"></div>
 
     <!-- Pop-up/modal -->
     <div id="popup">
         <h2>This is your pop-up message!</h2>
-        <p>Click anywhere outside the box to close it, or click the button below.</p>
+        <p>Click the button below to close it.</p>
         <button onclick="closePopup()">Close</button>
     </div>
 </body>
